add CSVData EtlManager

--- a/etl_py3.ipynb
+++ b/etl_py3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -51,8 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
-   "metadata": {},
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EtlCommand(traitlets.HasTraits):\n",
@@ -72,7 +74,6 @@
     "    \n",
     "    def drop(self,**kwargs):\n",
     "        col_value = kwargs.get('col')\n",
-    "        print ('drop:'+ col_value)\n",
     "        if col_value and col_value in self._header:\n",
     "            self._df.drop(col_value,axis=1,inplace=True)\n",
     "            self.update()\n",
@@ -107,8 +108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class EtlGUI(widgets.Box):\n",
@@ -137,7 +140,6 @@
     "            arg_name = arg.children[0].value\n",
     "            arg_value = arg.children[1].value\n",
     "            args[arg_name] = arg_value\n",
-    "        print(args)\n",
     "        action_handler(**args)\n",
     "    \n",
     "    @property\n",
@@ -179,8 +181,8 @@
     "                widget_arg = widgets.IntText(value)\n",
     "            elif isinstance(value,list):\n",
     "                widget_arg = widgets.Dropdown(options=value,value=None)\n",
-    "                if value =='col':\n",
-    "                    widget_arg.observe(self.fn,'value')\n",
+    "                if arg =='col':\n",
+    "                    widget_arg.observe(self.colChoose,'value')\n",
     "                    \n",
     "            elif isinstance(value,str):\n",
     "                widget_arg = widgets.Text(value)\n",
@@ -193,14 +195,15 @@
     "        arg_hbox.children = input_args\n",
     "        return arg_hbox\n",
     "    \n",
-    "    def fn(change):\n",
+    "    def colChoose(self,change):\n",
     "        value=change['new']\n",
+    "        self._cmds._table.colChoose([value])\n",
     "        \n",
     "\n",
     "class ColWidget(widgets.Box):\n",
     "    \n",
     "    value = traitlets.Unicode()\n",
-    "    def __init__(self,label='Col',options=None,placehold='please choose a column'):\n",
+    "    def __init__(self,label='col',options=None,placehold='please choose a column'):\n",
     "        super(ColWidget,self).__init__()\n",
     "        \n",
     "        self.layout = widgets.Layout(width=\"100%\",display='flex-flow',flex_flow='row', justify_content=u'flex-start')\n",
@@ -213,6 +216,7 @@
     "        self.inputs.observe(self.eventColChoose,'value')   \n",
     "        \n",
     "    def eventColChoose(self,change):\n",
+    "        print('eventColChoose:' + change['new'])\n",
     "        if change['new'] != self.placehold:\n",
     "            self.value = change['new']\n",
     "\n",
@@ -256,86 +260,46 @@
     "    def filterCancel(self,a):\n",
     "        self.apply = False    \n",
     "        \n",
-    "        "
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "\n",
-    "        \n"
+    "class DropWidget(EtlGUI):\n",
+    "    _operation = 'drop'\n",
+    "    \n",
+    "    def __init__(self,cmds,kwargs=None):\n",
+    "        super(DropWidget,self).__init__(self,cmds,kwargs=None)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5edefb35ebc49e88e1c5f13e4e5577b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(petalLength == 33) and (species in ['a','b','c']) and (species <> 'd')\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "f =FilterWidget(options=df.columns.values.tolist(),placehold=u'请选择列')\n",
-    "f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 522,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"(petalLength == 33) and (species in ['a','b','c'])\""
-      ]
-     },
-     "execution_count": 522,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 523,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fn(change):\n",
-    "    print(change['new'])\n",
-    "f.observe(fn,'value')   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -346,13 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b0e400636a6415aaced94a0af9b9837",
+       "model_id": "e63c559bfaa04a86af681e15d01e42dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -371,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea3f214e0bc54ad881ec5707a5727ab8",
+       "model_id": "116053a219a9407caa5de3d1cee1db0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -394,14 +358,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'col': 'sepalWidth'}\n",
-      "{'col': 'sepalLength'}\n"
-     ]
     }
    ],
    "source": [
@@ -410,22 +366,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79f8e5a370454f619f6e5c7c2b0a5eaf",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "Index(['petalWidth', 'sepalLength', 'sepalWidth', 'species'], dtype='object')"
+       "A Jupyter Widget"
       ]
      },
-     "execution_count": 245,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "cmd._df.columns"
+    "\n",
+    "f =FilterWidget(options=df.columns.values.tolist(),placehold=u'请选择列')\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 523,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fn(change):\n",
+    "    print(change['new'])\n",
+    "f.observe(fn,'value')   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cmd._table.colChoose([])"
    ]
   },
   {
@@ -621,7 +616,9 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = widgets.Dropdown(options=[1,2,3,4])\n",
